# spkb

./: .gitmodules  CMakeLists.txt
SPKB/: SPKB-B_Cu.gbr  SPKB-B_Silkscreen.gbr  SPKB-F_Cu.gbr  SPKB-F_Silkscreen.gbr  SPKB-Màscara_F.gbr  SPKB-Màscara_P.gbr  SPKB-Pasta_F.gbr  SPKB-Pasta_P.gbr  SPKB-Talls_Vora.gbr  SPKB-job.gbrjob  SPKB.kicad_pcb  SPKB.kicad_prl  SPKB.kicad_pro  SPKB.kicad_sch  fp-info-cache
include/: FreeRTOSConfig.h  board_spkb.h  board_xiao.h  board_zero.h  keycodes.h  keymap.h  utils.h
lib/mcp23018/: mcp23018.c
src/: keyboard.c  keyboard.h  main.c
src/freertos/: hooks.c
src/input/: joystick.c  joystick.h  matrix.c  matrix.h  matrix_scan.pio
src/keyboard/: matrix.c  matrix.h
src/output/: leds.c  leds.h  leds_show.pio
